# dragonseal

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml
core/: Animator.py  animator.py  exceptions.py  scene_manager.py
dragonseal/: __init__.py
dragonseal/base/: __init__.py  constants.py  folder_loader.py
dragonseal/core/: __init__.py  animator.py  exceptions.py  extract_number.py  folder_loader.py  scene.py
dragonseal/doc/: __init__.py  document.py
dragonseal/exceptions/: __init__.py  folder_have_already_exists.py  folder_not_found.py  folder_not_set.py  frame_out_of_animation.py  path_error.py  path_specific.py
dragonseal/utils/: __init__.py  path_check.py  path_error.py  path_valid.py
tests/: animator.py
